--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,9 +1,9 @@
 <div id="content">
   <h1>Sobre el proyecto</h1>
   <div class="section about">
-  <p>La herramienta busca fomentar la adopción de prácticas sostenibles y de economía circular en las PYMEs uruguayas mediante el desarrollo e implementación de una herramienta digital accesible de diagnóstico y gestión, contribuyendo así a la transformación del sector empresarial hacia modelos de negocio más eficientes, resilientes y ambientalmente responsables.</p>
+    <p>La herramienta busca fomentar la adopción de prácticas sostenibles y de economía circular en las PYMEs uruguayas mediante el desarrollo e implementación de una herramienta digital accesible de diagnóstico y gestión, contribuyendo así a la transformación del sector empresarial hacia modelos de negocio más eficientes, resilientes y ambientalmente responsables.</p>
     <div class="image-box">
-      <div class="image-box-image">/images/about.jpg</div>
+      <div class="image-box-image"><img src="/images/about.jpg"></img></div>
       <div class="image-box-text">
         <h2>Beneficios</h2>
         <ul>
@@ -13,11 +13,10 @@
           <li>• La herramienta ayuda a las PYMEs a identificar áreas de mejora fomentando la eficiencia y reducción del desperdicio. También promueve y aporta elementos para revisar y rediseñar procesos con enfoque de circularidad.</li>
           <li>• Promueve la asociatividad para el logro de objetivos e incorporación de buenas prácticas, como ventaja competitiva y también pertinente en base a las tendencias y normativas actuales. En esta línea, la herramienta fomenta la colaboración entre empresas para el aprovechamiento de residuos y subproductos.</li>
         </ul>
-   
+        <h2>Términos y condiciones</h2>
+        <p>La prestación de este servicio tiene carácter gratuito para los usuarios/as. Los usuarios se obligan a hacer buen uso del sitio web y de sus contenidos, respetando la normativa nacional vigente, las buenas costumbres y el orden público, comprometiéndose en todos los casos a no causar daños al mismo ni a ningún tercero. A tal efecto, el usuario/a se abstendrá de utilizar cualquiera de los servicios con fines o efectos ilícitos, prohibidos en los presentes términos y condiciones, lesivos de los derechos e intereses de terceros, o que de cualquier forma puedan dañar, inutilizar, sobrecargar, deteriorar o impedir la normal utilización de los servicios, documentos y toda clase de contenidos en cualquier equipo informático o de otros usuarios/as.</p>
+        <p>Para asegurarnos de que la aplicación esté acorde a las necesidades de nuestros usuarios, e intentar mejorarla utilizamos Google Analytics para recolectar información sobre cómo se utiliza. Google Analytics almacena información como qué páginas ha visitado, cuánto tiempo ha navegado en las mismas, cómo llegó a la página, qué elementos clikea e información sobre qué navegador utiliza. Su dirección IP es enmascarada (parcialmente almacenada) y la información personal sólo es reportada en forma no individualizada (agregada). No permitimos a Google usar o compartir nuestros datos analíticos para ningún propósito además de proveernos de información analítica y recomendamos que todo usuario de Google Analytics siga la misma política.</p>
+      </div>
+    </div>
   </div>
-  <h2>Términos y condiciones</h2>
-<p>La prestación de este servicio tiene carácter gratuito para los usuarios/as. Los usuarios se obligan a hacer buen uso del sitio web y de sus contenidos, respetando la normativa nacional vigente, las buenas costumbres y el orden público, comprometiéndose en todos los casos a no causar daños al mismo ni a ningún tercero. A tal efecto, el usuario/a se abstendrá de utilizar cualquiera de los servicios con fines o efectos ilícitos, prohibidos en los presentes términos y condiciones, lesivos de los derechos e intereses de terceros, o que de cualquier forma puedan dañar, inutilizar, sobrecargar, deteriorar o impedir la normal utilización de los servicios, documentos y toda clase de contenidos en cualquier equipo informático o de otros usuarios/as.</p>
-<p>Para asegurarnos de que la aplicación esté acorde a las necesidades de nuestros usuarios, e intentar mejorarla utilizamos Google Analytics para recolectar información sobre cómo se utiliza. Google Analytics almacena información como qué páginas ha visitado, cuánto tiempo ha navegado en las mismas, cómo llegó a la página, qué elementos clikea e información sobre qué navegador utiliza. Su dirección IP es enmascarada (parcialmente almacenada) y la información personal sólo es reportada en forma no individualizada (agregada). No permitimos a Google usar o compartir nuestros datos analíticos para ningún propósito además de proveernos de información analítica y recomendamos que todo usuario de Google Analytics siga la misma política.</p>
- 
- </div>
 </div>
