--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -39,37 +39,31 @@
       <div class="image-box image-box-left">
         <div class="image-box-image"><img src="/images/pymes.jpg"/></div>
           <div class="image-box-text">
-		  <h2>Beneficios para PYMES</h2>
-        <ul>    
-          <li>Generación de información clave sobre la operativa de la empresa</li>
-          <li>Identificación de los principales aspectos ambientales a gestionar</li>
-          <li>Identificación de oportunidades para la reducción de costos al optimizar el uso de recursos y minimizar desperdicios</li>
-          <li>Detección de mejoras en los procesos que pueden generar una mayor eficiencia operativa</li>
-          <li>Acceso a nuevas oportunidades de negocio, alineándose con clientes que buscan proveedores más sostenibles</li>
-          <li>Posibilidad de explorar nuevas líneas de productos y modelos de negocio circulares</li>
-        </ul>
+            <h2>Beneficios para PYMES</h2>
+            <ul>    
+              <li>Generación de información clave sobre la operativa de la empresa</li>
+              <li>Identificación de los principales aspectos ambientales a gestionar</li>
+              <li>Identificación de oportunidades para la reducción de costos al optimizar el uso de recursos y minimizar desperdicios</li>
+              <li>Detección de mejoras en los procesos que pueden generar una mayor eficiencia operativa</li>
+              <li>Acceso a nuevas oportunidades de negocio, alineándose con clientes que buscan proveedores más sostenibles</li>
+              <li>Posibilidad de explorar nuevas líneas de productos y modelos de negocio circulares</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="image-box image-box-right">
+        <div class="image-box-image"><img src="/images/tractoras.jpeg"/></div>
+          <div class="image-box-text">
+            <h2>Beneficios para Empresas Tractoras</h2>
+            <ul>    
+              <li>Mayor sostenibilidad en su cadena de suministro, reduciendo riesgos ambientales y económicos</li>
+              <li>Mejora en la trazabilidad de insumos y materias primas</li>
+              <li>Cumplimiento de estándares y normativas ambientales, facilitando certificaciones y requisitos de mercado</li>
+              <li>Refuerzo de su reputación en mercados que valoran la sostenibilidad</li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
-    <div class="section">
-    <div class="image-box image-box-right">
-      <div class="image-box-image"><img src="/images/tractoras.jpg"/></div>
-        <div class="image-box-text">
-    <h2>Beneficios para Empresas Tractoras</h2>
-      <ul>    
-        <li>Mayor sostenibilidad en su cadena de suministro, reduciendo riesgos ambientales y económicos</li>
-        <li>Mejora en la trazabilidad de insumos y materias primas</li>
-        <li>Cumplimiento de estándares y normativas ambientales, facilitando certificaciones y requisitos de mercado</li>
-        <li>Refuerzo de su reputación en mercados que valoran la sostenibilidad</li>
-      </ul>
-      </div>
-    </div>
-  </div>
-#    <div class="section">
-#      <h2>Empresas Aliadas</h2>
-#      <div class="logo-slider">
-#        
-#      </div>
-#    </div>
   </div>
 </div> 
