--- a/app/assets/stylesheets/front.css
+++ b/app/assets/stylesheets/front.css
@@ -64,6 +64,7 @@ h4 {
   font-family: var(--font-inter);
   color: var(--color-black);
   text-align: left;
+  margin-bottom: 10px;
 }
 a {
   font-size: 12px;
@@ -172,6 +173,7 @@ a {
 }
 .image-box-image {
   min-width: 250px;
+  width: 25%;
 }
 /**** HEADER  *****/
 #mobile-menu {
