Cambio en dash y header de poll

--- a/app/views/companies/dashboard.html.erb
+++ b/app/views/companies/dashboard.html.erb
@@ -2,7 +2,7 @@
   <div id="company-dashboard">
     <%= render partial: 'company_data' %>
     <% if current_company.is_main_company %>
-      <h2>Evaluacciones de Organizaciones asociadas</h2>
+      <h2>Evaluaciones de Organizaciones asociadas</h2>
       <% Evaluation.where(is_submitted: true, company_id: current_company.company_child_companies.pluck(:id)).order(:submitted_date).each do |e| %>
         <% company = e.company %>
         <div id="company-evaluations">
@@ -80,14 +80,5 @@
         <%= link_to t(:new_evaluation), company_answer_poll_path, class: "main-button" %>
       <% end %>
     <% end %>
-    <div class="image-box image-box-left">
-      <div class="image-box-image"><div class="rectangle-div"></div></div>
-      <div class="image-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum tellus elit sed risus. Maecenas eget condimentum velit, sit amet feugiat lectus.
-
-        Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent auctor purus luctus enim egestas, ac scelerisque ante pulvinar. Donec ut rhoncus ex. Suspendisse ac rhoncus nisl, eu tempor urna.
-
-        Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus. Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus.
-      </div>
-    </div>
   </div>
 </div>
