--- a/app/views/evaluations/_evaluation_result.html.erb
+++ b/app/views/evaluations/_evaluation_result.html.erb
@@ -67,4 +67,15 @@
     <% end %>
     </div>
   </div>
-</div>  
+  <div class="actions">
+    <button class="main-button" onclick="printContent()">Imprimir</button>
+  </div>
+</div>
+<script>
+  function printContent(){
+    let originalContents = document.body.innerHTML
+    document.body.innerHTML = document.getElementById('content').innerHTML
+    window.print();
+    document.body.innerHTML = originalContents;
+  }
+</script>
