Cambios de configuración para prod

--- a/app/views/admin_mailer/new_company.html.erb
+++ b/app/views/admin_mailer/new_company.html.erb
@@ -4,7 +4,7 @@
   <hr>
   <p>
     Hola Admin<br>
-    Se ha creado y confirmado una nueva organización, para aprobarla ingresa <%= link_to "AQUI", "#{Rails.application.routes.default_url_options[:host]}/admin/companies/#{@company.id}/edit"%> 
+    Se ha creado y confirmado una nueva organización, para aprobarla ingresa <%= link_to "AQUI", "https://#{Rails.application.routes.default_url_options[:host]}/admin/companies/#{@company.id}/edit"%> 
   </p>
   <p>
     Si usted ha recibido este correo por equivocación, por favor contacte a <a href="mailto:soporte@data.org.uy">Soporte de DATA</a><br>
