--- a/app/assets/stylesheets/polls.css
+++ b/app/assets/stylesheets/polls.css
@@ -38,6 +38,9 @@ h3 {
     
   }
 }
+#poll {
+  width: 100%;
+}
 #poll form .section-header {
   flex-direction: column;
   align-items: flex-start;
