Se agregan correcciones finales antes de pruebas reales

--- a/app/assets/stylesheets/front.css
+++ b/app/assets/stylesheets/front.css
@@ -180,6 +180,12 @@ span {
   min-width: 250px;
   width: 25%;
 }
+.print-only {
+  display: none;
+}
+img.print-only {
+  width: 180px;
+}
 /**** HEADER  *****/
 #mobile-menu {
   display: none;
