--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,26 @@
     <%# Includes all stylesheet files in app/assets/stylesheets %>
     <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+
+    <!-- Primary Meta Tags -->
+    <title>Gemma - Economía circular para empresas</title>
+    <meta name="title" content="Gemma - Economía circular para empresas" />
+    <meta name="description" content="La herramienta digital de gestión y autodiagnóstico de circularidad de Pymes, permite integrar y profesionalizar buenas prácticas sostenibles. A través de esta plataforma, facilitamos un recurso para que las empresas grandes impulsen a las pymes de su cadena de valor a mejorar sus modelos de negocios desde la perspectiva de la circularidad." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://gestionec.gemma.uy" />
+    <meta property="og:title" content="Gemma - Economía circular para empresas" />
+    <meta property="og:description" content="La herramienta digital de gestión y autodiagnóstico de circularidad de Pymes, permite integrar y profesionalizar buenas prácticas sostenibles. A través de esta plataforma, facilitamos un recurso para que las empresas grandes impulsen a las pymes de su cadena de valor a mejorar sus modelos de negocios desde la perspectiva de la circularidad." />
+    <meta property="og:image" content="https://gestionec.gemma.uy/meta.png" />
+
+    <!-- X (Twitter) -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://gestionec.gemma.uy" />
+    <meta property="twitter:title" content="Gemma - Economía circular para empresas" />
+    <meta property="twitter:description" content="La herramienta digital de gestión y autodiagnóstico de circularidad de Pymes, permite integrar y profesionalizar buenas prácticas sostenibles. A través de esta plataforma, facilitamos un recurso para que las empresas grandes impulsen a las pymes de su cadena de valor a mejorar sus modelos de negocios desde la perspectiva de la circularidad." />
+    <meta property="twitter:image" content="https://gestionec.gemma.uy/meta.png" />
+
   </head>
 
   <body>
